--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ aside {
     background-color: #2589bd;
 }
 
-aside div {
+aside section {
     margin-bottom: 32px;
 }
 
@@ -122,7 +122,7 @@ footer {
     text-align: center;
 }
 
-footer h2 {
+footer h4 {
     font-size: 20px;
     color: #000000;
 }
